--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,68 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+  font-size: 5rem;
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  color: #282828;
+  padding: 10px;
+}
+
+#app {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  height: 100vh;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
+  justify-items: center;
+  margin-top: 20px;
+}
+
+#app div.itemContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 10px 30px;
+  border-radius: 10px;
+  width: 350px;
+  -webkit-box-shadow: 0px 0px 20px #bababa80;
+          box-shadow: 0px 0px 20px #bababa80;
+}
+
+#app div.itemContainer:hover {
+  background: #f3f3f3;
+  -webkit-box-shadow: 0px 0px 40px #bababad0;
+          box-shadow: 0px 0px 40px #bababad0;
+}
+
+#app div.itemContainer img.image {
+  width: 100px;
+  border-radius: 50px;
+}
+
+#app div.itemContainer div h2 {
+  color: #282828;
+  font-size: 2rem;
+}
+
+#app div.itemContainer div p {
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
