--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,58 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+$fontColor: #282828;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
+  font-size: 5rem;
   text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  color: $fontColor;
+  padding: 10px;
+
+}
+
+#app {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 100vh;
+  column-gap: 15px;
+  justify-items: center;
+  margin-top: 20px;
+
+  div.itemContainer {
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    padding: 10px 30px;
+    border-radius: 10px;
+    width: 350px;
+    box-shadow:  0px 0px 20px #bababa80;
+    
+    &:hover {
+      background: #f3f3f3;
+      box-shadow:  0px 0px 40px #bababad0;
+    }
+
+    img.image {
+      width: 100px;
+      border-radius: 50px;
+    }
+
+    div h2 {
+      color: $fontColor;
+      font-size: 2rem;
+    }
+
+    div p {
+      font-size: 1.5rem;
+    }
+  }
 }
