--- a/styles/style.css
+++ b/styles/style.css
@@ -20,13 +20,13 @@ h1 {
 #app {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
   height: 100vh;
   -webkit-column-gap: 15px;
           column-gap: 15px;
+  row-gap: 15px;
   justify-items: center;
   margin-top: 20px;
+  padding: 0 20px;
 }
 
 #app div.itemContainer {
@@ -41,7 +41,7 @@ h1 {
   height: fit-content;
   padding: 10px 30px;
   border-radius: 10px;
-  width: 350px;
+  width: -webkit-fill-available;
   -webkit-box-shadow: 0px 0px 20px #bababa80;
           box-shadow: 0px 0px 20px #bababa80;
 }
@@ -64,5 +64,26 @@ h1 {
 
 #app div.itemContainer div p {
   font-size: 1.5rem;
+}
+
+@media screen and (min-width: 340px) {
+  #app {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  #app {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #app {
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 /*# sourceMappingURL=style.css.map */
